# stewart

./: .gitignore  README.md
src/stewart/: package.xml
src/stewart/launch/: stewart.launch
src/stewart/models/stewart/: model.sdf  model.sdf.erb
src/stewart/plugins/: CMakeLists.txt  ball1_plugin.cpp  ball2_plugin.cpp  ik.cpp  ik.h  qdot_calc.cpp  qdot_calc.h  stewart_plugin.cpp  velocity.cpp  velocity.h
src/stewart/scripts/: events.py  gen_positions.py  ik.py  qdot_calc.py  splines.py  velocity.py  x_calc.py
src/stewart/worlds/: stewart.world
src/stewart_plugin/: CMakeLists.txt  ball_plugin.cpp  copy.txt  ik.cpp  ik.h  posCmdFormat.txt  qdot_calc.cpp  qdot_calc.h  stewart.world  stewart_plugin.cpp  velocityAPI.cpp
src/stewart_plugin/models/stewart/: model.sdf
